# XTU_2024_C_AI_Exam

./: CMakeLists.txt  CODE_OF_CONDUCT.md  README.md  T1.c  T13.c
Exam/: T10.c  T11.c  T12.c  T13.c  T14.c  T15.c  T16.c  T17.c  T18.c  T19.c  T2.c  T20.c  T21.c  T22.c  T23.c  T24.c  T25.c  T26.c  T27.c  T28.c  T29.c  T3.c  T30.c  T31.c  T32.c  T33.c  T34.c  T35.c  T36.c  T37.c  T38.c  T39.c  T4.c  T40.c  T41.c  T42.c  T43.c  T44.c  T45.c  T46.c  (+17 more)
