cmake_minimum_required(VERSION 3.28)
project(XTU_2024_C_AI_Exam)

set(CMAKE_CXX_STANDARD 17)


add_executable(T1 Exam/T1.c)
add_executable(T2 Exam/T2.c)
add_executable(T3 Exam/T3.c)
add_executable(T4 Exam/T4.c)
add_executable(T5 Exam/T5.c)
add_executable(T6 Exam/T6.c)
add_executable(T7 Exam/T7.c)
add_executable(T8 Exam/T8.c)
add_executable(T9 Exam/T9.c)
add_executable(T10 Exam/T10.c)
add_executable(T11 Exam/T11.c)
add_executable(T12 Exam/T12.c)
add_executable(T13 Exam/T13.c)
add_executable(T14 Exam/T14.c)
add_executable(T15 Exam/T15.c)
add_executable(T16 Exam/T16.c)
add_executable(T17 Exam/T17.c)
add_executable(T18 Exam/T18.c)
add_executable(T19 Exam/T19.c)
add_executable(T20 Exam/T20.c)
add_executable(T21 Exam/T21.c)
add_executable(T22 Exam/T22.c)
add_executable(T23 Exam/T23.c)
add_executable(T24 Exam/T24.c)
add_executable(T25 Exam/T25.c)
add_executable(T26 Exam/T26.c)
add_executable(T27 Exam/T27.c)
add_executable(T28 Exam/T28.c)
add_executable(T29 Exam/T29.c)
add_executable(T30 Exam/T30.c)
add_executable(T31 Exam/T31.c)
add_executable(T32 Exam/T32.c)
add_executable(T33 Exam/T33.c)
add_executable(T34 Exam/T34.c)
add_executable(T35 Exam/T35.c)
add_executable(T36 Exam/T36.c)
add_executable(T37 Exam/T37.c)
add_executable(T38 Exam/T38.c)
add_executable(T39 Exam/T39.c)
add_executable(T40 Exam/T40.c)
add_executable(T41 Exam/T41.c)
add_executable(T42 Exam/T42.c)
add_executable(T43 Exam/T43.c)
add_executable(T44 Exam/T44.c)
add_executable(T45 Exam/T45.c)
add_executable(T46 Exam/T46.c)
add_executable(T47 Exam/T47.c)
add_executable(T48 Exam/T48.c)
add_executable(T49 Exam/T49.c)
add_executable(T50 Exam/T50.c)
add_executable(T51 Exam/T51.c)
add_executable(T52 Exam/T52.c)
add_executable(T53 Exam/T53.c)
add_executable(T54 Exam/T54.c)
add_executable(T55 Exam/T55.c)
add_executable(T56 Exam/T56.c)
add_executable(T57 Exam/T57.c)
add_executable(T58 Exam/T58.c)